--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "name": "server-booking",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node api/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
